--- a/Web/Pages/CCGMember/Compare/Delta.cshtml
+++ b/Web/Pages/CCGMember/Compare/Delta.cshtml
@@ -189,10 +189,10 @@
                     @{
                         var routedata = new Dictionary<string, string>
                     {
-                        { "positionid",  Model.PositionId.ToString()},
-                        { "objectiveid",  Model.Obj.ToString() },
-                        { "id",  Model.Id.ToString()},
-                        { "level",  Model.Level.ToString() },
+                        {"positionid",  Model.PositionId.ToString()},
+                        {"objectiveid",  Model.ObjectiveId.ToString() },
+                        {"id",  Model.Id.ToString()},
+                        {"level",  Model.Level.ToString() },
                         {"levelobj", Model.LevelObj.ToString() },
                         {"pagesubmit", "true" },
                         {"samelevels" , Model.SameLevels},
