--- a/Web/Pages/CCGMember/Similar/SimilarDetails.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarDetails.cshtml
@@ -6,7 +6,7 @@
     var routedata = new Dictionary<string, string>
     {
         {"positionid" , Model.PositionId.ToString()},
-        { "obj",  Model.ObjectiveId.ToString()},
+        {"objectiveid",  Model.ObjectiveId.ToString()},
         {"id", Model.Id.ToString() },
         {"level", Model.Level.ToString() },
         {"levelObj", Model.LevelObj },
