--- a/Web/Pages/Student/University/AllPositions.cshtml
+++ b/Web/Pages/Student/University/AllPositions.cshtml
@@ -23,7 +23,7 @@
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
                     <a asp-page="Business">
-                        <img src="~/img/CCGMember/AS.jpg" alt="Photo of" class="img-responsive" />
+                        <img src="~/img/Student/Business.jpg" alt="Photo of" class="img-responsive" />
                     </a>
                 </div>
                 <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["business"]</h4></figcaption>
@@ -43,7 +43,7 @@
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
                     <a asp-page="Engineering">
-                        <img src="~/img/CCGMember/ENG.jpg" alt="Photo of" class="img-responsive" />
+                        <img src="~/img/Student/ENG.jpg" alt="Photo of" class="img-responsive" />
                     </a>
                 </div>
                 <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["engineering"]</h4></figcaption>
@@ -53,7 +53,7 @@
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;line-height: 1.0">
                 <div class="img-container">
                     <a asp-page="GeneralArts">
-                        <img src="~/img/CCGMember/PM.jpg" alt="Photo of" class="img-responsive" />
+                        <img src="~/img/Student/General Arts.jpg" alt="Photo of" class="img-responsive" />
                     </a>
                 </div>
                 <figcaption class="caption text-center"><h4 class="h6  mrgn-tp-0 mrgn-bttm-0">@Localizer["arts"]<br /><small>@Localizer["language"]</small></h4></figcaption>
@@ -63,7 +63,7 @@
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
                     <a asp-page="Sciences">
-                        <img src="~/img/CCGMember/NU.jpg" alt="Photo of" class="img-responsive" />
+                        <img src="~/img/Student/Nurse2.jpg" alt="Photo of" class="img-responsive" />
                     </a>
                 </div>
                 <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["sciences"]</h4></figcaption>
@@ -73,7 +73,7 @@
             <figure class="thumbnail eqht-trgt" style="vertical-align: top; line-height:1.0">
                 <div class="img-container">
                     <a asp-page="SocialScience">
-                        <img src="~/img/CCGMember/EC.jpg" alt="Photo of" class="img-responsive" />
+                        <img src="~/img/Student/Social Science.jpg" alt="Photo of" class="img-responsive" />
                     </a>
                 </div>
                 <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-0 mrgn-bttm-0">@Localizer["social"]<br /><small>@Localizer["economics"]</small></h4></figcaption>
