--- a/Web/Pages/Candidate/Shoreside/SimilarList.cshtml
+++ b/Web/Pages/Candidate/Shoreside/SimilarList.cshtml
@@ -41,3 +41,13 @@
         </tbody>
     </table>
 </div>
+<div class="row">
+    <div class="col-lg-12 mrgn-tp-md">
+        <nav role="navigation" class="mrgn-bttm-lg">
+            <h2 class="wb-inv">Document navigation</h2>
+            <ul class="pager">
+                <li class="previous"><a class="btn btn-default" type="button" rel="prev" asp-page="AllCandidateShoreside">@Localizer["Previous"]</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
