--- a/Web/Pages/Student/College/AllPositions.cshtml
+++ b/Web/Pages/Student/College/AllPositions.cshtml
@@ -9,31 +9,48 @@
 
         <h2>@Localizer["Q1"]</h2>
 
-        <div class="col-sm-4">
-            <figure>
-                <a asp-page="Administrative">
-                    <img src="~/img/CCGMember/AS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-                </a>
-                <figcaption class="text-center"><h5>@Localizer["admin"]</h5></figcaption>
+        <div class="col-lg-4 col-sm-6">
+            <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
+                <div class="img-container">
+                    <a href="@Localizer["link"]" target="_blank">
+                        <img src="~/img/Student/CCGCollege.jpg" alt="Photo of" class="img-responsive" />
+                    </a>
+                </div>
+                <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" href="@Localizer["link"]" target="_blank">@Localizer["ccgcollege"]</a></h4></figcaption>
             </figure>
         </div>
-        <div class="col-sm-4">
-            <figure>
-                <a asp-page="Computer">
-                    <img src="~/img/CCGMember/CS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-                </a>
-                <figcaption class="text-center"><h5>@Localizer["computer"]</h5></figcaption>
-            </figure>
+
+        <div class="col-lg-4 col-sm-6">
+            <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
+                <div class="img-container">
+                    <a asp-page="Administrative">
+                        <img src="~/img/CCGMember/AS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                    </a>
+                    <figcaption class="text-center"><h5>@Localizer["admin"]</h5></figcaption>
+                </div>
+           </figure>
         </div>
-        <div class="col-sm-4">
-            <figure>
-                <a asp-page="Cook">
-                    <img src="~/img/CCGMember/GS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-                </a>
-                <figcaption class="text-center"><h5>@Localizer["cook"]</h5></figcaption>
-            </figure>
+        <div class="col-lg-4 col-sm-6">
+            <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
+                <div class="img-container">
+                    <a asp-page="Computer">
+                        <img src="~/img/CCGMember/CS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                    </a>
+                    <figcaption class="text-center"><h5>@Localizer["computer"]</h5></figcaption>
+                    </div>
+                </figure>
         </div>
-        <div class="col-sm-4">
+        <div class="col-lg-4 col-sm-6">
+            <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
+                <div class="img-container">
+                    <a asp-page="Cook">
+                        <img src="~/img/CCGMember/GS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                    </a>
+                    <figcaption class="text-center"><h5>@Localizer["cook"]</h5></figcaption>
+                </div>
+         </figure>
+        </div>
+        <div class="col-lg-4 col-sm-6">
             <figure>
                 <a asp-page="Electrical">
                     <img src="~/img/CCGMember/GT.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
@@ -41,45 +58,55 @@
                 <figcaption class="text-center"><h5>@Localizer["electrical"]</h5></figcaption>
             </figure>
         </div>
-        <div class="col-sm-4">
-            <figure>
-                <a asp-page="Electronics">
-                    <img src="~/img/CCGMember/EL.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-                </a>
-                <figcaption class="text-center"><h5>@Localizer["electronics"]</h5></figcaption>
-            </figure>
+        <div class="col-lg-4 col-sm-6">
+            <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
+                <div class="img-container">
+                    <a asp-page="Electronics">
+                        <img src="~/img/CCGMember/EL.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                    </a>
+                    <figcaption class="text-center"><h5>@Localizer["electronics"]</h5></figcaption>
+                </div>
+          </figure>
         </div>
-        <div class="col-sm-4">
-            <figure>
-                <a asp-page="GeographicalInformation">
-                    <img src="~/img/Student/geo.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-                </a>
-                <figcaption class="text-center"><h5>@Localizer["geo"]</h5></figcaption>
-            </figure>
+        <div class="col-lg-4 col-sm-6">
+            <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
+                <div class="img-container">
+                    <a asp-page="GeographicalInformation">
+                        <img src="~/img/Student/geo.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                    </a>
+                    <figcaption class="text-center"><h5>@Localizer["geo"]</h5></figcaption>
+                   </div>
+             </figure>
         </div>
-        <div class="col-sm-4">
-            <figure>
-                <a asp-page="NauticalDeck">
-                    <img src="~/img/CCGMember/SC.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-                </a>
-                <figcaption class="text-center"><h5>@Localizer["deck"]</h5></figcaption>
-            </figure>
+        <div class="col-lg-4 col-sm-6">
+            <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
+                <div class="img-container">
+                    <a asp-page="NauticalDeck">
+                        <img src="~/img/CCGMember/SC.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                    </a>
+                    <figcaption class="text-center"><h5>@Localizer["deck"]</h5></figcaption>
+                  </div>
+              </figure>
         </div>
-        <div class="col-sm-4">
-            <figure>
-                <a asp-page="NauticalEngineering">
-                    <img src="~/img/CCGMember/Officer-Eng.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-                </a>
-                <figcaption class="text-center"><h5>@Localizer["engineering"]</h5></figcaption>
-            </figure>
+        <div class="col-lg-4 col-sm-6">
+            <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
+                <div class="img-container">
+                    <a asp-page="NauticalEngineering">
+                        <img src="~/img/Student/Marine Engineer - College CCT.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                    </a>
+                    <figcaption class="text-center"><h5>@Localizer["engineering"]</h5></figcaption>
+               </div>
+           </figure>
         </div>
-        <div class="col-sm-4">
-            <figure>
-                <a class="nav-link" asp-page="Trades">
-                    <img src="~/img/CCGMember/GL.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-                </a>
-                <figcaption class="text-center"><h5>@Localizer["trades"]</h5></figcaption>
-            </figure>
+        <div class="col-lg-4 col-sm-6">
+            <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
+                <div class="img-container">
+                    <a class="nav-link" asp-page="Trades">
+                        <img src="~/img/CCGMember/GL.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                    </a>
+                    <figcaption class="text-center"><h5>@Localizer["trades"]</h5></figcaption>
+                 </div>
+          </figure>
         </div>
         <div class="row">
             <div class="col-lg-12 mrgn-bttm-md">
