--- a/Web/Pages/CCGMember/Similar/SimilarDetails.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarDetails.cshtml
@@ -15,6 +15,7 @@
         {"higherlevels", Model.HigherLevels },
         {"certificates", Model.Certificates },
         {"sameorhigherlevels", Model.SameOrHigherLevels },
+        {"addedcompetencies",Model.AddedCompetencies},
         {"percentmatch", Model.PercentMatch },
         {"previouspagesimilar", Model.PreviousPageSimilar },
         {"previouspagedetails", Model.PreviousPageDetails },
@@ -32,6 +33,7 @@
         {"higherlevels", Model.HigherLevels },
         {"certificates", Model.Certificates },
         {"sameorhigherlevels", Model.SameOrHigherLevels },
+        {"addedcompetencies",Model.AddedCompetencies},
         {"percentmatch", Model.PercentMatch },
         {"previouspagesimilar", Model.PreviousPageSimilar },
         {"previouspagedetails", Model.PreviousPageDetails },
@@ -82,11 +84,13 @@
                 {
                     @foreach (var competencytype in Model.PositionCompetencyRatings)
                     {
+                        if (competencytype.Any()) 
+                        { 
                         <tr>
                             <th style="background-color:#f2f2f2" width="80%"> @(isEnglish ? competencytype.FirstOrDefault()?.TypeNameEng.ToUpper() : competencytype.FirstOrDefault()?.TypeNameFre.ToUpper())</th>
                             <th style="background-color:#f2f2f2" class="text-center" width="20%">@Localizer["LEVEL"]</th>
                         </tr>
-
+                       
                         foreach (var c in competencytype)
                         {
                             var key1 = "a" + c.CompetencyId.ToString();
@@ -124,6 +128,7 @@
                                     </section>
                                 </td>
                             </tr>
+                            }
                         }
                     }
                 }
