--- a/Web/Pages/CCGMember/Similar/SimilarList.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarList.cshtml
@@ -13,6 +13,7 @@
         {"higherlevels", Model.HigherLevels },
         {"certificates", Model.Certificates },
         {"sameorhigherlevels", Model.SameOrHigherLevels },
+        {"addedcompetencies",Model.AddedCompetencies},
         {"percentmatch", Model.PercentMatch },
         {"previouspage", Model.PreviousPage },
         {"previouspagesimilar", Model.PreviousPageSimilar },
@@ -50,6 +51,7 @@
         {"pagesubmit", "true" },
         {"samelevels" , Model.SameLevels},
         {"higherlevels", Model.HigherLevels },
+        {"addedcompetencies",Model.AddedCompetencies},
         {"certificates", Model.Certificates },
         {"sameorhigherlevels", Model.SameOrHigherLevels },
         {"percentmatch", Model.PercentMatch },
