--- a/Web/Pages/CCGMember/Details.cshtml
+++ b/Web/Pages/CCGMember/Details.cshtml
@@ -46,11 +46,12 @@
                 {
                     @foreach (var competencytype in Model.PositionCompetencyRatings)
                     {
+                        if (competencytype.Any())
+                        {
                         <tr>
                             <th style="background-color:#f2f2f2" width="80%"> @(isEnglish ? competencytype.FirstOrDefault()?.TypeNameEng.ToUpper() : competencytype.FirstOrDefault()?.TypeNameFre.ToUpper())</th>
                             <th style="background-color:#f2f2f2" class="text-center" width="20%">@Localizer["LEVEL"]</th>
-                        </tr>
-
+                        </tr>                       
                         foreach (var c in competencytype)
                         {
                             var key1 = "a" + c.CompetencyId.ToString();
@@ -88,6 +89,7 @@
                                     </section>
                                 </td>
                             </tr>
+                            }
                         }
                     }
                 }
