--- a/Web/Views/ToPdf/GetPositionDetailsAsPdf.cshtml
+++ b/Web/Views/ToPdf/GetPositionDetailsAsPdf.cshtml
@@ -59,6 +59,7 @@
             {
                 @foreach (var competencytype in PositionCompetencyRatings)
                 {
+                    if (competencytype.Any()) { 
                     <tr>
                         <th style="background-color:#f2f2f2" width="80%">@(isEnglish ? competencytype.FirstOrDefault()?.TypeNameEng.ToUpper() : competencytype.FirstOrDefault()?.TypeNameFre.ToUpper())</th>
                         <th style="background-color:#f2f2f2" class="text-center" width="20%">@level</th>
@@ -74,8 +75,9 @@
 
                         </td>
                     </tr>
-                } 
-              }
+                      }
+                   }
+                }
             }
         </tbody>
     </table>
