updates for student/add competencies

--- a/Web/Pages/CCGMember/Compare/Delta.cshtml
+++ b/Web/Pages/CCGMember/Compare/Delta.cshtml
@@ -101,8 +101,22 @@
                 <tbody>
                     @foreach (var d in Model.DifferingCertificates)
                     {
+                        var key = "c" + d.Id.ToString();
                         <tr>
-                            <td width="70%">@d.NameEng</td>
+                            <td>
+                                <a href="#@key" aria-controls="centred-popup" class="wb-lbx" role="button">
+                                    @(isEnglish ? d.NameEng : d.NameFre)
+                                </a>
+                                <section id="@key" class="mfp-hide modal-dialog modal-content overlay-def">
+                                    <header class="modal-header">
+                                        <h2 class="modal-title">@(isEnglish ? d.NameEng : d.NameFre)</h2>
+                                    </header>
+                                    <div class="modal-body ">
+                                        <p>@(isEnglish ? d.DescEng : d.DescFre)</p>
+                                        <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
+                                    </div>
+                                </section>
+                            </td>
                             <td class="text-center bg-success">&nbsp;</td>
                             <td class="text-center bg-info">&nbsp;</td>
                         </tr>
@@ -205,6 +219,7 @@
                         {"higherlevels", Model.HigherLevels },
                         {"certificates", Model.Certificates },
                         {"sameorhigherlevels", Model.SameOrHigherLevels },
+                        {"requiredcompetencies", Model.RequiredCompetencies },
                         {"addedcompetencies",Model.AddedCompetencies},
                         {"percentmatch", Model.PercentMatch },
                         {"previouspagesimilar", Model.PreviousPageSimilar },
