--- a/Web/Pages/CCGMember/Similar/SimilarList.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarList.cshtml
@@ -14,6 +14,7 @@
         {"certificates", Model.Certificates },
         {"sameorhigherlevels", Model.SameOrHigherLevels },
         {"addedcompetencies",Model.AddedCompetencies},
+        {"requiredcompetencies", Model.RequiredCompetencies },
         {"percentmatch", Model.PercentMatch },
         {"previouspage", Model.PreviousPage },
         {"previouspagesimilar", Model.PreviousPageSimilar },
@@ -54,6 +55,7 @@
         {"addedcompetencies",Model.AddedCompetencies},
         {"certificates", Model.Certificates },
         {"sameorhigherlevels", Model.SameOrHigherLevels },
+        {"requiredcompetencies", Model.RequiredCompetencies },
         {"percentmatch", Model.PercentMatch },
         {"previouspagesimilar", Model.PreviousPageSimilar },
         {"previouspagedetails", Model.PreviousPageDetails },
